# Hortator

./: .dockerignore  .gitignore  .golangci.yml  .goreleaser.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CODE_REVIEW.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PROJECT  README.md  REMAINING-WORK.md  SECURITY.md  backlog.md  bugs.md  fix-manifests.sh  go.mod  go.sum  mkdocs.yml  release-please-config.json  roles.md  test-task.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: build-images.yml  ci.yaml  e2e.yaml  pr-check.yaml  release-cli.yml  release-please.yaml
api/v1alpha1/: agentpolicy_types.go  agentrole_types.go  agenttask_types.go  groupversion_info.go  zz_generated.deepcopy.go
charts/hortator/: Chart.yaml  values.yaml
cmd/: main.go
crds/: agentpolicy.yaml  agentrole.yaml  agenttask.yaml  core.hortator.ai_agenttasks.yaml
docs/: architecture.md  concept-api-surface.md  design-agentic-loop.md  design-file-delivery-and-rag.md  design-retry-semantics.md  faq.md  go-to-market.md  index.md  roadmap.md
hack/: boilerplate.go.txt  quickstart.sh
helm/: values.yaml
runtime/: Dockerfile  README.md  entrypoint.sh
sdk/python/: README.md  pyproject.toml
sdk/python/examples/: basic_usage.py  crewai_delegation.py  langchain_tool.py  streaming.py
sdk/python/hortator/: __init__.py  _streaming.py  client.py  exceptions.py  models.py
sdk/python/hortator/integrations/: __init__.py  crewai.py  langchain.py
sdk/python/tests/: test_client.py  test_models.py  test_streaming.py
(+182 files in other folders)
