[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hortator"
version = "0.1.0"
description = "Python SDK for Hortator — Kubernetes-native AI agent orchestration"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Hortator Authors" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
langchain = ["langchain-core>=0.2.0"]
crewai = ["crewai>=0.1.0"]
all = ["langchain-core>=0.2.0", "crewai>=0.1.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "respx>=0.21"]

[project.urls]
Homepage = "https://github.com/hortator-ai/hortator"
Documentation = "https://hortator.ai/docs"
Repository = "https://github.com/hortator-ai/hortator"

[tool.hatch.build.targets.wheel]
packages = ["hortator"]
